<resources>
    <string name="app_name">Odonto Libras</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="singup">Sing Up</string>
    <string name="nameuser">Full Name</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="repeat_password">Confirm Password</string>
</resources>
